# rust-wasm-gltf-viewer

./: .gitignore  README.md  package.json
backend/: Cargo.toml
backend/src/: lib.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  wasm.d.ts
